--- a/dangeun.html
+++ b/dangeun.html
@@ -93,7 +93,7 @@
           <span style="font-size:22px;">자금 <b>최소 1억~최대 30억</b></span><br>
           <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금 조달이 고민이신가요?</b><br></span>
           <span style="font-size: 18px;">
-          무담보·저금리 넉넉한 상환기간 등 정책금융 제도를 기업 상황에 맞게 활용하는 맞춤 컨설팅으로 안정감을 되찾으세요.
+          무담보·저금리 넉넉한 상환기간 등 정책금융 제도를 기업 상황에 맞게 활용하는 맞춤 컨설팅으로 안정적으로 자금을 확보하세요.
           </span>
         </p>
         <div class="bullets" role="list">
@@ -572,18 +572,18 @@
   <div class="success__grid">
     <div class="success__card">
       <span class="success__num" data-target="5234">0건</span>
-      <span class="success__label">정책자금 및 경영지원</span><br>
-      <span class="success__label2">자문건수</span>
+      <span class="success__label">정책자금 및 지원금</span><br>
+      <span class="success__label2">성공건수</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="97.3">0%</span>
-      <span class="success__label">정책자금(자문기준)</span><br>
-      <span class="success__label2">매칭률</span>
+      <span class="success__label">정책자금 및 지원금</span><br>
+      <span class="success__label2">승인률</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="95.7">0%</span>
       <span class="success__label">기존건 외 추가조달</span><br>
-      <span class="success__label2">연계율</span>
+      <span class="success__label2">성공율</span>
     </div>
   </div>
 
