--- a/dangeun.html
+++ b/dangeun.html
@@ -91,7 +91,7 @@
           <span style="font-size:22px;">금리 <b>연2~4%대</b></span><br>
           <span style="font-size:22px;">상환기간 <b>최대 15년</b></span><br>
           <span style="font-size:22px;">자금한도 <b>최소 1억~최대 30억</b></span><br>
-          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금 조달이 고민이신가요?</b><br></span>
+          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 혹시 자금때문에 고민중이신가요?</b><br></span>
           <span style="font-size: 18px;">
           무담보·저금리 넉넉한 상환기간 등 정책금융 제도를 기업 상황에 맞게 활용하는 맞춤 컨설팅으로 안정적으로 자금을 확보하세요.
           </span>
