--- a/meta.html
+++ b/meta.html
@@ -34,14 +34,6 @@
   /></noscript>
   <!-- End Meta Pixel Code -->
 
-<!-- Danggeun Market Code -->
-<script src="https://karrot-pixel.business.daangn.com/0.4/karrot-pixel.umd.js"></script>
-<script>
-  window.karrotPixel.init('1760898545523909001');
-  window.karrotPixel.track('ViewPage');
-</script>
-<!-- End Danggeun Market Code -->
-
 </head>
 
 <body>
@@ -560,18 +552,18 @@
   <div class="success__grid">
     <div class="success__card">
       <span class="success__num" data-target="5234">0건</span>
-      <span class="success__label">정책자금 및 지원금</span><br>
-      <span class="success__label2">성공건수</span>
+      <span class="success__label">정책자금 및 경영지원</span><br>
+      <span class="success__label2">자문건수</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="97.3">0%</span>
-      <span class="success__label">정책자금 및 지원금</span><br>
-      <span class="success__label2">승인률</span>
+      <span class="success__label">정책자금(자문기준)</span><br>
+      <span class="success__label2">매칭률</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="95.7">0%</span>
       <span class="success__label">기존건 외 추가조달</span><br>
-      <span class="success__label2">성공율</span>
+      <span class="success__label2">연계율</span>
     </div>
   </div>
 
@@ -1149,7 +1141,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!--JS파일-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!--(필수)이 제이쿼리 코드 다음에 js코드가 와야함-->
-  <script src="./js/form-fund-dang-kkjj.js"></script>
+  <script src="./js/form-fund-meta-kkjj.js"></script>
   <script src="js/validation-fund.js"></script>
   <script src="js/personal.js"></script>
   <script src="js/main.js" charset="euc-kr"></script>
@@ -1157,7 +1149,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <script>
   $('#form').attr("name","fm");
-  $('[name="entry.1767017674"]').val("당근");
+  $('[name="entry.1767017674"]').val("META");
   $('#select_lic').css({"display":"none"});
   </script>
 
