--- a/dangeun.html
+++ b/dangeun.html
@@ -86,7 +86,7 @@
           개인·법인 사업자 업종별 정책자금 활용 솔루션
         </span>
 
-        <h1 class="title">2025년 경기도 제조업·도소매(OEM) 정책자금 솔루션</h1>
+        <h1 class="title">2025년 경기도 제조업 정책자금 솔루션</h1>
         <p class="lead">
           <span style="font-size:22px;">금리 <b>연2~4%대</b></span><br>
           <span style="font-size:22px;">상환기간 <b>최대 15년</b></span><br>
@@ -102,7 +102,7 @@
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>경기도 소재 <strong>제조업,도소매(OEM)</strong> 사업장</div>
+            <div>경기도 소재 <strong>제조업</strong> 사업장</div>
           </div>
 
           <div class="bullet" role="listitem">
@@ -1157,7 +1157,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <script>
   $('#form').attr("name","fm");
-  $('[name="entry.1767017674"]').val("당근");
+  $('[name="entry.1767017674"]').val("당근 경기도");
   $('#select_lic').css({"display":"none"});
   </script>
 
