--- a/dangeun-incheon.html
+++ b/dangeun-incheon.html
@@ -34,6 +34,14 @@
   /></noscript>
   <!-- End Meta Pixel Code -->
 
+<!-- Danggeun Market Code -->
+<script src="https://karrot-pixel.business.daangn.com/0.4/karrot-pixel.umd.js"></script>
+<script>
+  window.karrotPixel.init('1760898545523909001');
+  window.karrotPixel.track('ViewPage');
+</script>
+<!-- End Danggeun Market Code -->
+
 </head>
 
 <body>
@@ -78,7 +86,7 @@
           개인·법인 사업자 업종별 정책자금 활용 솔루션
         </span>
 
-        <h1 class="title">2025년 경기도 제조업 정책자금 솔루션</h1>
+        <h1 class="title">2025년 인천광역시 제조업 정책자금 솔루션</h1>
         <p class="lead">
           <span style="font-size:22px;">금리 <b>연2~4%대</b></span><br>
           <span style="font-size:22px;">상환기간 <b>최대 15년</b></span><br>
@@ -94,7 +102,7 @@
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>경기도 소재 <strong>제조업</strong> 사업장</div>
+            <div>인천광역시 소재 <strong>제조업</strong> 사업장</div>
           </div>
 
           <div class="bullet" role="listitem">
@@ -552,18 +560,18 @@
   <div class="success__grid">
     <div class="success__card">
       <span class="success__num" data-target="5234">0건</span>
-      <span class="success__label">정책자금 및 경영지원</span><br>
-      <span class="success__label2">자문건수</span>
+      <span class="success__label">정책자금 및 지원금</span><br>
+      <span class="success__label2">성공건수</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="97.3">0%</span>
-      <span class="success__label">정책자금(자문기준)</span><br>
-      <span class="success__label2">매칭률</span>
+      <span class="success__label">정책자금 및 지원금</span><br>
+      <span class="success__label2">승인률</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="95.7">0%</span>
       <span class="success__label">기존건 외 추가조달</span><br>
-      <span class="success__label2">연계율</span>
+      <span class="success__label2">성공율</span>
     </div>
   </div>
 
@@ -1141,7 +1149,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!--JS파일-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!--(필수)이 제이쿼리 코드 다음에 js코드가 와야함-->
-  <script src="./js/form-fund-meta-kkjj.js"></script>
+  <script src="./js/form-fund-dang-icjj.js"></script>
   <script src="js/validation-fund.js"></script>
   <script src="js/personal.js"></script>
   <script src="js/main.js" charset="euc-kr"></script>
@@ -1149,7 +1157,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <script>
   $('#form').attr("name","fm");
-  $('[name="entry.1767017674"]').val("META");
+  $('[name="entry.1767017674"]').val("당근 인천");
   $('#select_lic').css({"display":"none"});
   </script>
 
