--- a/meta-kyeongki.html
+++ b/meta-kyeongki.html
@@ -1149,7 +1149,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <script>
   $('#form').attr("name","fm");
-  $('[name="entry.1767017674"]').val("META");
+  $('[name="entry.1767017674"]').val("META 경기");
   $('#select_lic').css({"display":"none"});
   </script>
 
