--- a/demand-incheon.html
+++ b/demand-incheon.html
@@ -78,7 +78,7 @@
           개인·법인 사업자 업종별 정책자금 활용 솔루션
         </span>
 
-        <h1 class="title">2025년 하반기 인천시 정책자금 컨설팅 솔루션</h1>
+        <h1 class="title">2025년 하반기 인천광역시 정책자금 컨설팅 솔루션</h1>
         <p class="lead">
           <span style="font-size:24px;">2025년 정책기준 (참고수치)</span><br>
           <span style="font-size:22px;">금리 <b>연 2~4%대</b></span><br>
