--- a/demand-incheon.html
+++ b/demand-incheon.html
@@ -15,6 +15,15 @@
   <link rel="stylesheet" href="css/ionicons.min.css"  /> <!--개인정보 팝업 닫기버튼-->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-830866619"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-830866619');
+  </script>
 
   <!-- Meta Pixel Code -->
   <script>
