--- a/dangeun-incheon.html
+++ b/dangeun-incheon.html
@@ -137,7 +137,7 @@
   <!--섹션2 시작 -->
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
-    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>기업 경영자금 컨설팅<br></h1>
+    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>제조업 경영자금 컨설팅<br></h1>
     <p class="section__desc">정책자금 활용으로 성장한<br>대표님들의 실제 이야기를 확인해보세요</p>
   </div>
 
@@ -174,7 +174,7 @@
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts001.png" class="ts__photo">
+                  <img src="./img/jj001.png" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -192,27 +192,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>카페 모OO (박XX 대표님)</strong>
-                    <span class="chip">요식업(카페)</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 서울 마포</span>
-                    <span>승인자금 | 5,000만원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>태O정밀 (김XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “카페 막 시작했을 때 운영자금이 제일 힘들었거든요. 
-                  은행은 서류만 쌓이고 답이 안 나오니 포기할까 싶었는데, 
-                  정책자금 상담에서 저희 규모에 맞는 대출을 알려주더라고요. 
-                  덕분에 인테리어 마무리도 하고, 초반 홍보도 무리 없이 진행할 수 있었습니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 경기 안산</span>
+                  <span>승인자금 | 2억 원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “기계 한 대가 멈추면 납품 일정이 다 밀릴 정도로 빡빡한 생산 라인이었습니다.
+                이번에 지원받은 설비 교체 자금으로 노후 프레스를 교체하면서 불량률이 크게 줄었어요.
+                덕분에 야근 없이 납기를 맞추고, 새 거래처도 두 곳이나 생겼습니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts002.png" class="ts__photo">
+                  <img src="./img/jj002.png" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -230,27 +229,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>넥스트OO (이XX 대표님)</strong>
-                    <span class="chip">IT 스타트업</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 서울 강남</span>
-                    <span>승인자금 | 3억 원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>해O식품 (박XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “개발팀이랑 마케팅팀을 꼭 늘려야 하는 시점이었는데, 
-                  인건비가 발목을 잡더라고요. 솔직히 어디서부터 자금을 구해야 할지 막막했는데, 
-                  담당자님이 절차를 하나하나 알려줘서 결국 자금을 확보할 수 있었습니다. 
-                  지금은 개발자랑 디자이너를 새로 뽑아서 본격적으로 확장 중입니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 인천 남동구</span>
+                  <span>승인자금 | 1억 8천만원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “원재료값이 계속 올라서 원가 부담이 컸습니다.
+                정책자금으로 제때 원료 대금을 결제하고 생산을 멈추지 않을 수 있었어요.
+                거래처에 신뢰를 잃지 않게 돼서 마음이 놓입니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts003.png"  class="ts__photo">
+                  <img src="./img/jj003.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -268,27 +266,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>브레인OO학원 (정XX 원장님)</strong>
-                    <span class="chip">교육 서비스업</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 대전 서구</span>
-                    <span>승인자금 | 1억 원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>성O테크 (김XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “솔직히 정책자금은 어렵고 까다롭다는 생각이 있었는데, 
-                  상담을 받아보니 제 상황에 맞는 상품을 바로 알려주시더라고요. 
-                  승인 절차도 생각보다 간단해서 금방 자금을 확보할 수 있었습니다. 
-                  지금은 자금 걱정 없이 콘텐츠 개발에만 집중하고 있습니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 경기 화성</span>
+                  <span>승인자금 | 3억 원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “전기요금이 급등하면서 사출기 가동이 부담이었는데
+                이번 자금으로 절전형 사출기를 도입했습니다.
+                생산 효율은 오르고 전기료는 줄어서 회사가 한결 숨통이 트였습니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts004.png" class="ts__photo">
+                  <img src="./img/jj004.png" class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -306,26 +303,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>한빛로OO스틱스 (최XX 대표님)</strong>
-                    <span class="chip">물류업</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 부산 강서</span>
-                    <span>승인자금 | 2억 원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>세O패키지 (정XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “차량 교체가 꼭 필요했는데 비용이 너무 부담스러웠습니다. 
-                  다행히 정책자금으로 신규 차량을 들여올 수 있었고, 그 덕에 배송 속도랑 정확도가 눈에 띄게 좋아졌습니다. 
-                  고객사에서도 신뢰가 높아져서 매출도 자연스럽게 올랐습니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 인천 서구</span>
+                  <span>승인자금 | 1억 원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “포장 원단 단가가 계속 오르는데 납품가는 그대로라 고민이 많았습니다.
+                정책자금 덕분에 원단을 미리 대량 확보할 수 있었고,
+                급한 물량이 들어와도 단가를 방어할 수 있었습니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts005.png"  class="ts__photo">
+                  <img src="./img/jj005.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -343,26 +340,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>라벨르OO메틱 (한XX 대표님)</strong>
-                    <span class="chip">뷰티 브랜드</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 서울 성수</span>
-                    <span>승인자금 | 7,000만원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>디O테크 (조XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “제품력은 자신 있었는데, 광고할 돈이 너무 부족해서 항상 답답했어요. 
-                  그런데 정책자금으로 마케팅 비용을 마련하고 나니 온라인 광고를 본격적으로 집행할 수 있었고, 몇 달 만에 매출이 확 늘었습니다. 
-                  광고 부담이 줄자 신제품 개발에도 더 자신 있게 투자하게 됐습니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 경기 시흥</span>
+                  <span>승인자금 | 2억 5천만원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “수입 자재가 늦게 들어오면서 납기가 위험했는데,
+                정책자금으로 대체 자재를 긴급 확보했습니다.
+                덕분에 해외 수출 일정을 지키고, 바이어와의 신뢰를 이어갈 수 있었습니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts006.png"  class="ts__photo">
+                  <img src="./img/jj006.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -380,26 +377,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>대성OO설 (윤XX 대표님)</strong>
-                    <span class="chip">건설업</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 인천 남동</span>
-                    <span>승인자금 | 4억 원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>디O테크 (조XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “큰 프로젝트를 따냈는데 자재비랑 인건비가 동시에 올라서 자금 압박이 장난 아니었습니다. 
-                  정책자금 덕분에 현금을 제때 마련할 수 있었고, 공사도 일정 맞춰서 진행할 수 있었습니다. 
-                  이 지원이 없었다면 공사를 멈출 수도 있었을 거예요.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 경기 시흥</span>
+                  <span>승인자금 | 2억 5천만원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “수입 자재가 늦게 들어오면서 납기가 위험했는데,
+                정책자금으로 대체 자재를 긴급 확보했습니다.
+                덕분에 해외 수출 일정을 지키고, 바이어와의 신뢰를 이어갈 수 있었습니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts007.png"  class="ts__photo">
+                  <img src="./img/jj007.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -417,27 +414,25 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>레스토랑 미OO (장XX 대표님)</strong>
-                    <span class="chip">외식업</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 광주 동구</span>
-                    <span>승인자금 | 1억 2천만 원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>우O가구 (한XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “혼자 은행 다니면서 자금 알아볼 때는 서류 때문에 너무 복잡해서 포기할 뻔했는데, 
-                  정책자금 상담을 받으니 필요한 것만 준비하면 되더라고요. 
-                  자금을 확보한 덕분에 매장을 확장하고 주방 설비도 들여올 수 있었습니다. 
-                  지금은 손님 만족도도 올라가고 단골도 꾸준히 늘고 있습니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 경기 포천</span>
+                  <span>승인자금 | 8천만원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “가구 수요는 늘었는데 자재비가 너무 올라서 수익이 남지 않았어요.
+                정책자금으로 목재를 대량 구매하고, CNC 장비를 들여오면서 생산량이 두 배로 늘었습니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts008.png"  class="ts__photo">
+                  <img src="./img/jj008.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -455,26 +450,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>오븐치OO하우스 (오XX 대표님)</strong>
-                    <span class="chip">프랜차이즈</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 대구 수성</span>
-                    <span>승인자금 | 8,000만원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>대O산업 (윤XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “창업 초반에는 자금 압박이 정말 심해서 가게를 열 수 있을까 싶었습니다. 
-                  근데 정책자금을 빠르게 승인받으면서 인테리어랑 초기 운영비를 안정적으로 마련할 수 있었어요. 
-                  덕분에 첫 매장이 자리를 잡았고, 지금은 두 번째 매장을 준비할 정도로 성장했습니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 경기 평택</span>
+                  <span>승인자금 | 3억 5천만원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “전기차 부품 납품을 시작했지만, 신공정 설비가 비싸서 엄두가 안 났습니다.
+                시설자금 지원으로 프레스기를 교체했고,
+                제품 정밀도가 높아져 OEM 본사에서 추가 발주가 들어왔어요.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts009.png"  class="ts__photo">
+                  <img src="./img/jj009.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -492,26 +487,26 @@
             <div class="ts__grid">
             <!-- 왼쪽 큰 박스: 위/아래 텍스트 시작선과 폭 통일 -->
               <div class="ts__copy">
-                <div class="ts__copyHead">
-                  <div class="ts__headline">
-                    <strong>글로벌OO학원 (서XX 원장님)</strong>
-                    <span class="chip">교육업</span>
-                  </div>
-                  <div class="ts__meta">
-                    <span>지역 | 서울 노원</span>
-                    <span>승인자금 | 1억 2천만원</span>
-                  </div>
+              <div class="ts__copyHead">
+                <div class="ts__headline">
+                  <strong>엠O랩 (오XX 대표님)</strong>
+                  <span class="chip">제조업</span>
                 </div>
-                <blockquote class="ts__quote">
-                  “강사 인건비랑 교재 제작비가 한꺼번에 겹쳐서 운영이 많이 힘들었어요. 
-                  정책자금이 승인되면서 필요한 비용을 안정적으로 집행할 수 있었고, 남은 자금은 학생 맞춤형 콘텐츠 개발에 투자할 수 있었습니다. 
-                  지금은 강사랑 학생 모두 만족도가 높아지고, 학원도 훨씬 안정적으로 운영되고 있습니다.”
-                </blockquote>
+                <div class="ts__meta">
+                  <span>지역 | 인천 송도</span>
+                  <span>승인자금 | 2억 원</span>
+                </div>
               </div>
+              <blockquote class="ts__quote">
+                “수출 오더가 늘었는데 생산라인이 한계였어요.
+                정책자금으로 충전라인과 검사장비를 확충하면서
+                생산량이 1.5배 늘고, 신규 수출 계약도 문제없이 진행됐습니다.”
+              </blockquote>
+            </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
               <div class="ts__right">
                 <div class="ts__photoWrap">
-                  <img src="./img/ts010.png"  class="ts__photo">
+                  <img src="./img/jj010.png"  class="ts__photo">
                 </div>
                 <div class="ts__chartWrap">
                   <div class="ts__miniChart" aria-hidden="true">
@@ -588,7 +583,7 @@
 <section class="section promises"  id="proccess" aria-labelledby="promises-title">
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
-    <h2 id="promises-title" class="section__title">정책자금 컨설팅 솔루션<br>간편한 절차</h2>
+    <h2 id="promises-title" class="section__title">제조업 특화<br>정책자금 컨설팅 솔루션<br>간편한 절차</h2>
     <p class="section__desc">기업 운영에 필요한 자금을 복잡한 절차 없이 효율적으로 확보할 수 있습니다.</p>
   </div>
 
@@ -601,7 +596,7 @@
         </div>
         <h3 class="promise__title">1:1 맞춤 전문상담</h3>
         <p class="promise__desc">
-          현재 기업의 업종·매출·규모·2025년 하반기 정책 방향을 분석해 적합한 자금제도와 지원전략을 제안드립니다.
+          제조분야·매출·규모·2025년 하반기 정책 방향을 분석해 적합한 자금제도와 지원전략을 제안드립니다.
         </p>
       </li>
 
@@ -623,7 +618,7 @@
         </div>
         <h3 class="promise__title">최적화된 자금 확보</h3>
         <p class="promise__desc">
-          기업이 가진 조건과 정책요건을 종합 분석해 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다. 
+          기업이 가진 조건과 제조업 부문 정책요건을 종합분석해 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다. 
         </p>
       </li>
     </ul>
@@ -650,7 +645,7 @@
       </div>
 
       <p class="footer__slogan">
-        업종별 한도·금리 요건을 분석해<br>
+        제조업 기업의 한도·금리 요건을 분석해<br>
         정책자금 활용 전략을 제시하는 전문 컨설팅 그룹
       </p>
     </div>
