--- a/dangeun-kyeongki.html
+++ b/dangeun-kyeongki.html
@@ -548,7 +548,7 @@
 <!-- Section 4 : Success Rate -->
 <section class="section success" aria-labelledby="success-title">
   <div class="section__head">
-    <h2 id="success-title" class="section__title">5,234건 이상의 기업이 선택한<br>정책금융 컨설팅</h2>
+    <h2 id="success-title" class="section__title">5,234건 이상의 기업이 선택한<br>제조업 정책금융 컨설팅</h2>
     <p class="section__desc">15년 이상 축적된 경험으로 기업 맞춤 자금 컨설팅의 성과를 검증해왔습니다.</p>
   </div>
 
@@ -618,7 +618,7 @@
         </div>
         <h3 class="promise__title">최적화된 자금 확보</h3>
         <p class="promise__desc">
-          기업이 가진 조건과 제조업 부문 정책요건을 종합분석해 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다. 
+          제조 기업이 가진 재무 안정성과 성장 역량을 높여 자금의 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다.
         </p>
       </li>
     </ul>
