--- a/result.html
+++ b/result.html
@@ -625,7 +625,7 @@
         </div>
         <h3 class="promise__title">최적화된 자금 확보</h3>
         <p class="promise__desc">
-          기업이 가진 조건과 제조업 부문 정책요건을 종합분석해 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다. 
+          제조 기업이 가진 재무 안정성과 성장 역량을 높여 자금의 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다.
         </p>
       </li>
     </ul>
