--- a/result.html
+++ b/result.html
@@ -648,8 +648,8 @@
       </div>
 
       <p class="footer__slogan">
-        제조업 기업의 한도·금리 요건을 분석해<br>
-        정책자금 활용 전략을 제시하는 전문 컨설팅 그룹
+        제조기업의 재무를 진단하고<br>
+        최대한도&최저금리 승인 전략을 설계하는 전문 컨설팅 그룹
       </p>
     </div>
 
