--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
         <h1 class="title">2025년 하반기 경기도 정책금융 컨설팅 솔루션</h1>
         <p class="lead">
           <span style="font-size:24px;">2025년 정책기준 (참고수치)</span><br>
-          <span style="font-size:22px;">금리 <b>연 2%대</b></span><br>
+          <span style="font-size:22px;">금리 <b>연 2~4%대</b></span><br>
           <span style="font-size:22px;">상환기간 <b>5~15년</b> 내외</span><br>
           <span style="font-size:22px;">자금 최대 <b>최대 30억</b> 내외</span><br>
           <span style="font-size:18px;">※기업 규모 및 정책별 상이</span><br><br>
-          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금 조달이 고민이신가요?</b><br></span>
+          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금떄문에 고민이신가요?</b><br></span>
           <span style="font-size: 18px;">
-          무담보·저금리 등 정책금융 제도를 기업 상황에 맞게 활용하는 맞춤 컨설팅으로 안정감을 되찾으세요.
+          무담보·저금리 넉넉한 상환기간 등 기업에 유리한 정책금융제도를 우리 회사 상황에 맞춰 극대화할수 있는 맞춤 컨설팅으로 자금을 넉넉하게 확보하세요.
           </span>
         </p>
 
