--- a/meta-kyeongki.html
+++ b/meta-kyeongki.html
@@ -66,7 +66,7 @@
     <div class="container hero-inner">
       <!-- 좌측: 비주얼 -->
       <figure class="hero-visual" aria-label="정책자금 안내 비주얼">
-        <img src="./img/hero001.png" alt="정부정책자금 비주얼 이미지" />
+        <img src="./img/hero001-kk.png" alt="정부정책자금 비주얼 이미지" />
       </figure>
 
       <!-- 우측: 카피 & CTA -->
