--- a/demand-incheon.html
+++ b/demand-incheon.html
@@ -649,7 +649,7 @@
 
       <p class="footer__slogan">
         제조기업의 재무를 진단하고<br>
-        정책자금 활용 전략을 제시하는 전문 컨설팅 그룹<br><br>
+        최적의 정책자금 한도&금리 승인전략을 제시하는 전문 컨설팅 그룹<br><br>
         금리·한도·상환기간 등 정책자금 조건은 기관 및 심사결과에 따라 상이할 수 있습니다. 본 서비스는 정부 또는 공공기관이 아닌 민간 컨설팅 서비스입니다. 모든 상담은 무료로 진행되며, 상담 결과는 실제 승인 또는 자금 지원을 보장하지 않습니다.
       </p>
     </div>
