--- a/result.html
+++ b/result.html
@@ -649,7 +649,7 @@
 
       <p class="footer__slogan">
         제조기업의 재무를 진단하고<br>
-        최대한도&최저금리 승인 전략을 설계하는 전문 컨설팅 그룹
+        최적의 정책자금 한도&금리 승인전략을 제시하는 전문 컨설팅 그룹
       </p>
     </div>
 
