--- a/demand-kyeongki.html
+++ b/demand-kyeongki.html
@@ -84,7 +84,7 @@
           <svg class="spark" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path d="M12 2v20M2 12h20M5.5 5.5l13 13M18.5 5.5l-13 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
-          개인·법인 사업자 업종별 정책자금 활용 솔루션
+          제조업 사업자 정책자금 활용 솔루션
         </span>
 
         <h1 class="title">2025년 하반기 경기도 정책자금 컨설팅 솔루션</h1>
